--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,64 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    margin: 0;
+    font-family: "Verdana";
+    color: #d8cdcd;
+    background-color: #315459;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.form-row label {
+    display: flex;
+    align-items: center;
+}
+
+.form-row {
+    padding: 30px;
+    display: grid;
+    align-items: center;
+    max-width: 600px;
+    margin: 0 auto;
+    border-bottom: 1px solid #2C4B50;
+    font-size: 40px;
+}
+
+.form-row label {
+    padding: 30px;
+}
+
+input {
+    padding: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.btn {
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    margin: auto;
+    margin-top: 20px;
+}
+
+.to-do-checkList .header {
+    display: grid;
+    align-items: center;
+    margin: auto;
+}
+
+.list {
+    padding: 0px;
+    margin: auto;
+}
+
+li {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    padding: 20px;
+}
+
+.to-do-checkList {
+    padding: 20px;
+    display: grid;
+    align-items: center;
+    margin: auto;
 }
