--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,9 @@
 
 .form-row {
     padding: 30px;
-    display: grid;
+    display: flex;
     align-items: center;
+    flex-direction: column;
     max-width: 600px;
     margin: 0 auto;
     border-bottom: 1px solid #2C4B50;
@@ -28,6 +29,10 @@ input {
     padding: 10px;
     display: flex;
     align-items: center;
+}
+
+.input-for-new-task {
+    width: 20rem;
 }
 
 .btn {
